; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_rq.c_smb_rq_bstart.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_rq.c_smb_rq_bstart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smb_rq = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @smb_rq_bstart(%struct.smb_rq* %0) #0 {
  %2 = alloca %struct.smb_rq*, align 8
  store %struct.smb_rq* %0, %struct.smb_rq** %2, align 8
  %3 = load %struct.smb_rq*, %struct.smb_rq** %2, align 8
  %4 = getelementptr inbounds %struct.smb_rq, %struct.smb_rq* %3, i32 0, i32 0
  %5 = call i32 @mb_reserve(%struct.TYPE_2__* %4, i32 4)
  %6 = load %struct.smb_rq*, %struct.smb_rq** %2, align 8
  %7 = getelementptr inbounds %struct.smb_rq, %struct.smb_rq* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 8
  %8 = load %struct.smb_rq*, %struct.smb_rq** %2, align 8
  %9 = getelementptr inbounds %struct.smb_rq, %struct.smb_rq* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}

declare dso_local i32 @mb_reserve(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
